# routes/routes.js
@@ -16,7 +16,7 @@ import auth from '../middlewares/auth.js';
 const router = express.Router();
 
 router.post('/api/v1/auth/signup', signup);
-router.get('/api/v1/auth/login', login);
+router.post('/api/v1/auth/login', login);
 router.get('/api/v1/auth/logout', logout);
 router.put('/api/v1/auth/password/forgot', forgotPassword);
 router.put('/api/v1/auth/password/reset/:resetPasswordToken', resetPassword);
